# cdrive-manager

./: Cargo.toml  README.md  test_mft.bat
src/: ai_analysis.rs  app.rs  cleanup.rs  color_palette.rs  duplicates.rs  format.rs  main.rs  mft.rs  model.rs  organizer.rs  scan_cache.rs  scanner.rs  split_panel.rs  sunburst.rs  treemap.rs
