[package]
name = "cdrive-manager"
version = "0.1.0"
edition = "2024"
description = "A safe Rust desktop GUI for analyzing Windows C drive space usage"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake3 = "1"
crossbeam-channel = "0.5"
eframe = "0.32"
egui = "0.32"
open = "5"
rayon = "1.10"
num_cpus = "1.16"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

# Windows-specific dependencies for NTFS MFT scanning
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "ioapiset", "winbase", "winnt", "winioctl", "errhandlingapi", "winerror", "minwinbase"] }
